--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </div>
 
         <ul class="headers " id="head">
-            <li class="show tits" id="sidebar"><a href="#contents">Home</a></li>
-            <li class="show tits" id="sidebar"><a href="#resort">The Resort</a></li>
-            <li class="show tits" id="sidebar"><a href="#accomodation">Accomodation</a></li>
-            <li class="show tits" id="sidebar"><a href="#gastronomy">Gastronomy</a></li>
-            <li class="show tits" id="sidebar"><a href="#special-offers">Special Offers</a></li>
-            <li class="show tits" id="sidebar"><a href="#spa">Spa</a></li>
+            <li class="show " id="sidebar"><a href="#contents">Home</a></li>
+            <li class="show " id="sidebar"><a href="#resort">The Resort</a></li>
+            <li class="show " id="sidebar"><a href="#accomodation">Accomodation</a></li>
+            <li class="show " id="sidebar"><a href="#gastronomy">Gastronomy</a></li>
+            <li class="show " id="sidebar"><a href="#special-offers">Special Offers</a></li>
+            <li class="show " id="sidebar"><a href="#spa">Spa</a></li>
         </ul>
 
         <i class="fas fa-sliders-h"></i>
