--- a/Mauritius airport transfer/index.html
+++ b/Mauritius airport transfer/index.html
@@ -13,6 +13,7 @@
     <link rel="canonical" href="https://relaxed-shockley-f1fdce.netlify.app/" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Mauritius Airport Transfer - SSR International Airport</title>
+    <meta name="google-site-verification" content="KXeO3pVqcyLi6HnLlZAsDKYXUVd0zP5sS__RJY7pCqI" />
 </head>
 <body>
 
